Allow user to delete source reference
RISDEV-5898